# HexField

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  cargo_check_out.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: RECONCILIATION-2026-04-11.md  TODO.md  architecture-plan.md
docs/specs/: 01-project-setup.md  02-data-model.md  03-stores.md  04-ui-architecture.md  05-backend-commands.md  06-networking.md  07-message-sync.md  08-encryption.md  09-voice-screen.md  10-emoji.md  11-permissions.md  12-attachments.md  13-matrix.md
docs/superpowers/plans/: 2025-07-15-downscale-methods-overlay.md  2026-04-03-notification-system.md  2026-04-05-webrtc-rs-replacement.md  2026-04-06-code-review-fixes.md  2026-04-07-image-storage-and-negentropy-expansion.md  2026-04-09-diesel-migration.md  2026-04-09-rendezvous-server.md  2026-04-09-upnp-public-endpoint.md  2026-04-10-image-asset-protocol.md  2026-04-11-device-enumeration-ui.md  2026-04-11-rust-native-audio.md  2026-04-11-rust-native-screen-share.md  2026-04-14-replace-xcap-with-windows-capture.md  2026-04-15-screen-share-quality.md
docs/superpowers/specs/: 2026-04-03-notification-system-design.md  2026-04-04-moderation-and-access-control.md  2026-04-05-webrtc-rs-replacement.md  2026-04-15-screen-share-quality-design.md
e2e/: fixtures.ts  playwright.config.ts  tsconfig.json
e2e/tests/: multi-instance.spec.ts  smoke.spec.ts
scripts/: cross-platform-deps.mjs  dev-tauri.mjs  e2e-integration.mjs  inspect-dbs.mjs  reset-db.mjs  test-output.txt  test-screenshare.mjs
server/: Cargo.toml  Dockerfile  README.md
server/migrations/2026-04-09-000001_create_tables/: down.sql  up.sql
server/src/: auth.rs  config.rs  db.rs  main.rs  middleware.rs  models.rs  schema.rs  state.rs  ws.rs
server/src/routes/: invites.rs  mod.rs  servers.rs  turn.rs  users.rs
src/: App.vue  appConfig.ts  main.ts  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  cargo_errors.txt  tauri.conf.json
src-tauri/benches/: pipeline_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: HexField.af  icon.icns
src-tauri/migrations/: 001_initial.sql  002_member_avatar.sql  003_invite_codes_and_mod_log.sql  004_bans.sql  005_channel_acls.sql  006_join_requests.sql  007_messages_fts.sql  008_rebaseline.sql  009_member_profile_fields.sql  010_server_id_index.sql  011_image_hashes.sql  012_drop_data_url_cols.sql
src-tauri/src/: lan.rs  lib.rs  main.rs  media_manager.rs  upnp.rs  webrtc_manager.rs
src-tauri/src/capture/: mod.rs  stub.rs  windows.rs
src-tauri/src/commands/: archive_commands.rs  attachment_commands.rs  db_commands.rs  keychain_commands.rs  media_commands.rs  mod.rs  signal_commands.rs  sync_commands.rs  webrtc_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs  types.rs
src/assets/: emoji-data.json
src/components/: AppIcon.vue  AvatarImage.vue  ContextMenu.vue  Notification.vue  Settings.vue  StatusBadge.vue  TitleBar.vue
src/components/__tests__/: AvatarImage.test.ts
src/components/chat/: AttachmentPreview.vue  EmojiPicker.vue  MessageBubble.vue  MessageContent.vue  MessageHistory.vue  MessageInput.vue  MethodSelector.vue  QualitySelector.vue  ReactionBar.vue  TypingIndicator.vue  VoiceBar.vue  VoiceContentPane.vue  VoicePeerTile.vue
src/components/chat/__tests__/: MessageBubble.test.ts
src/components/layout/: ChannelNotifPopover.vue  ChannelSidebar.vue  MainPane.vue  MemberList.vue  MemberRow.vue  ServerRail.vue
src/components/modals/: AlertModal.vue  ChannelAccessModal.vue  DeviceLinkModal.vue  InviteModal.vue  JoinCapsuleModal.vue  JoinModal.vue  ModerationActionModal.vue  ServerCreateModal.vue  ServerSettingsModal.vue  SourcePickerModal.vue  UserProfileModal.vue
src/components/settings/: SettingsAppearanceTab.vue  SettingsAutoSaveTab.vue  SettingsEditorTab.vue  SettingsExperimentalTab.vue  SettingsHelpTab.vue  SettingsNotificationsTab.vue  SettingsPrivacyTab.vue  SettingsProfileTab.vue  SettingsShortcutsTab.vue  SettingsVoiceTab.vue  settingsStyles.css
src/router/: index.ts
src/services/: attachmentService.ts  audioService.ts  cryptoService.ts  signalingService.ts  soundService.ts  syncService.ts  webrtcService.ts
src/services/__tests__/: crossPeerIntegration.test.ts  cryptoService.test.ts  soundService.test.ts  syncService.test.ts
src/stores/: channelsStore.ts  devicesStore.ts  emojiStore.ts  identityStore.ts  messagesStore.ts  networkStore.ts  notificationStore.ts  personalBlocksStore.ts  serversStore.ts  settingsStore.ts  uiStore.ts  voiceStore.ts
src/stores/__tests__/: channelsStore.test.ts  devicesStore.test.ts  identityStore.test.ts  messagesStore.test.ts  networkStore.nat.test.ts  networkStore.upnp.test.ts  notificationStore.test.ts  serversStore.test.ts
src/styles/: global.css
src/types/: core.ts
src/utils/: autoSave.ts  contextMenuResolver.ts  error.ts  hlc.ts  imageCache.ts  keyboard.ts  logger.ts  mutationBackfill.ts  natDetection.ts  peerValidator.ts  twemoji.ts  updateService.ts  useBreakpoint.ts  useFocusTrap.ts  useIsAdmin.ts
src/utils/__tests__/: hlc.test.ts  imageCache.test.ts  natDetection.test.ts  peerValidator.test.ts  updateService.test.ts  useBreakpoint.test.ts  useIsAdmin.test.ts
src/utils/editor/: usePaneResize.ts
src/utils/storage/: fileStorage.ts  filesystem.ts  storage.ts
src/views/: ApproveJoinView.vue  JoinView.vue  MainLayout.vue
src/views/__tests__/: MainLayout.test.ts
