[package]
name = "hexfield-server"
version = "0.1.0"
edition = "2021"
description = "HexField rendezvous, signal relay, and discovery server"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8"
governor = "0.10.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.10.0"
base64 = "0.22"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2"
hmac = "0.13.0"
sha1 = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
