[package]
name = "hexfield"
version = "0.2.5"
description = "HexField — privacy-first P2P chat"
authors = []
edition = "2021"

[lib]
name = "hexfield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
e2e-testing = ["tauri-plugin-playwright"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri              = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-log   = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs    = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-playwright = { version = "0.2", optional = true }

# Serde
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
log                = "0.4"

# SQLite
rusqlite           = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"

# Async runtime + networking
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite  = { version = "0.29.0", features = ["native-tls"] }
futures-util       = "0.3"
reqwest            = { version = "0.13.2", features = ["json", "native-tls"] }

# Identity
uuid               = { version = "1", features = ["v4", "v7"] }
ed25519-dalek      = { version = "2", features = ["serde"] }
rand               = "0.10.0"

# P2P sync + content-addressing
negentropy         = "0.5"
blake3             = "1"
base64             = "0.22"

# LAN discovery
mdns-sd            = "0.19.0"

# UPnP IGD + NAT-PMP port forwarding
igd-next           = { version = "0.17", features = ["aio_tokio"] }

# WebRTC (Rust-native data channels; replaces browser RTCPeerConnection on Linux)
webrtc             = "0.17.1"

# OS Keychain (Phase 3 crypto tier)
keyring            = "3"


[target.'cfg(target_os = "windows")'.dependencies]
windows            = { version = "0.62.2", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Registry"] }

# tauri-pilot: AI-agent / developer testing CLI (Linux + debug builds only).
# Not available on Windows/macOS (uses Unix sockets; cross-platform support planned upstream).
[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-pilot = { git = "https://github.com/mpiton/tauri-pilot" }

[dev-dependencies]
tempfile = "3"
