[package]
name = "hexfield"
version = "0.2.5"
description = "HexField — privacy-first P2P chat"
authors = []
edition = "2021"
default-run = "hexfield"

[lib]
name = "hexfield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
e2e-testing = ["tauri-plugin-playwright"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri              = { version = "2", features = ["macos-private-api", "devtools", "protocol-asset"] }
tauri-plugin-log   = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs    = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-playwright = { version = "0.2", optional = true }

# Serde
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
log                = "0.4"

# SQLite
rusqlite           = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"

# Async runtime + networking
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite  = { version = "0.29.0", features = ["native-tls"] }
futures-util       = "0.3"
reqwest            = { version = "0.13.2", features = ["json", "native-tls"] }

# Identity
uuid               = { version = "1", features = ["v4", "v7"] }
ed25519-dalek      = { version = "2", features = ["serde"] }
rand               = "0.10.0"

# P2P sync + content-addressing
negentropy         = "0.5"
blake3             = "1"
base64             = "0.22"

# LAN discovery
mdns-sd            = "0.19.0"

# UPnP IGD + NAT-PMP port forwarding
igd-next           = { version = "0.17", features = ["aio_tokio"] }

# Audio capture & playback (mic/speaker access)
cpal               = "0.17"

# Opus audio codec (encode mic → WebRTC, decode WebRTC → speaker)
opus               = "0.3"

# Byte buffer ergonomics (already a transitive dep of webrtc, but pin explicitly)
bytes              = "1"



# H.264 video codec — encode captured frames, decode received frames
# Compiles OpenH264 from bundled source (no system deps).
openh264           = "0.9"

# Lock-free bounded channels for encoder thread pipeline
crossbeam-channel  = "0.5"

# Image encoding/decoding (JPEG for frame delivery to frontend via asset://)
image              = "0.25"

# WebRTC (Rust-native data channels; replaces browser RTCPeerConnection on Linux)
webrtc             = "0.17.1"
# RTP H.264 depacketizer (transitive dep of webrtc, pinned for direct import)
rtp                = "0.17.1"

# Both `webrtc`/`dtls` and `reqwest`/`hyper-rustls` pull in rustls with different
# crypto provider features (ring vs aws-lc-rs), making auto-selection panic.
# Depend explicitly so we can call ring::default_provider().install_default() at startup.
rustls             = { version = "0.23", default-features = false, features = ["ring", "std"] }

# OS Keychain (Phase 3 crypto tier)
keyring            = "3"


[target.'cfg(target_os = "windows")'.dependencies]
windows            = { version = "0.62.2", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Registry"] }
windows-capture    = "2.0.0"

# tauri-pilot: AI-agent / developer testing CLI (Linux + debug builds only).
# Not available on Windows/macOS (uses Unix sockets; cross-platform support planned upstream).
[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-pilot = { git = "https://github.com/mpiton/tauri-pilot" }

[dev-dependencies]
tempfile = "3"

# Dev profile: optimize the main crate's hot pixel loops (BGRA→RGBA swap,
# image::resize call site). Without this a 4K frame swap takes ~1.9s;
# with opt-level 1 it drops to ~20ms. Keeps debuginfo and fast iterative
# compiles. Deps that do heavy pixel processing get level 2 separately.
[profile.dev.package.hexfield]
opt-level = 1

# Pixel-processing deps benefit from full optimization (level 2).
[profile.dev.package.openh264]
opt-level = 2

[profile.dev.package.openh264-sys2]
opt-level = 2

[profile.dev.package.image]
opt-level = 2
